--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,16 @@
 :root {
-    --primaryColor: #0076df;
-    --primaryFadedColor: #66b8ff;
+    --primaryColor: #1b9cfc;
+    --primaryFadedColor: #25ccf7;
     --secondaryColor: #34495e;
     --bgColor: white;
     --bgSecondaryColor: #f5f5f5;
-    --defaultGradientBackground: linear-gradient(70deg, #1b9cfc, #25ccf7);
+    --defaultGradientBackground: linear-gradient(70deg, var(--primaryColor), var(--primaryFadedColor)); /* var(--primaryColor), var(--primaryFadedColor) */
     --primaryFont: 'Inconsolata', monospace;
     --secondaryFont: 'Source Code Pro', monospace;
 }
 
 @media screen and (prefers-color-scheme: dark) {
     :root {
-        --primaryColor: #0076df;
-        --primaryFadedColor: #66b8ff;
         --secondaryColor: white;
         --bgColor: #2f3542;
         --bgSecondaryColor: #34495e;
@@ -93,7 +91,7 @@ footer.site-footer .site-footer-content a {
 }
 
 footer.site-footer .site-footer-content nav.items li .coin-address {
-    color: #1B9CFC;
+    color: var(--primaryColor);
 }
 
 
@@ -184,13 +182,13 @@ header.site-header .menu li {
 }
 
 header.site-header .menu li.highlighted {
-    border: 1px solid #2980b9;
+    border: 1px solid var(--primaryColor);
     border-radius: 3px;
     margin-left: 15px; padding: 8px 15px;
 }
 
 header.site-header .menu li.highlighted a {
-    color: #2980b9;
+    color: var(--primaryColor);
     font-size: 0.95em;
     text-decoration: none;
 }
@@ -250,7 +248,7 @@ header.site-header .menu li:hover > ul {
     position: absolute;
     flex-direction: column;
     background-color: var(--bgColor);
-    border: 1px solid #3498db;
+    border: 1px solid var(--primaryColor);
     padding: 10px 0;
     box-sizing: border-box;
     margin-top: 10px;
@@ -415,7 +413,7 @@ article.post-card:nth-child(even) {
 
 article.post-card a:not(.post-card-content-link) {
     background-color: rgba(0, 118, 223, 0.2);
-    color: #0076df;
+    color: var(--primaryColor);
 }
 
 article.post-card .post-card-header {
